--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "vite-project",
-  "private": true,
+    "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"start":"npm run build && npm run serve"
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
@@ -23,7 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
+,
     "vite": "^4.4.5"
   }
 }
