--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-	"start":"npm run build && npm run serve"
+	"start":"PORT=8080 npm run build && npm run server"
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
@@ -23,8 +23,6 @@
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-,
-    "vite": "^4.4.5"
-  }
+    "eslint-plugin-react-refresh": "^0.4.3"
+}
 }
